0.5.0 - replace HttpClient with HttpURLConnection
Thus removing the need for java 11.